--- a/veebipood/src/App.css
+++ b/veebipood/src/App.css
@@ -32,3 +32,13 @@
   background-color: rgb(231, 57, 57);
   text-decoration: underline;
 }
+
+a img:hover {
+  /* https://isotropic.co/tool/hex-color-to-css-filter/ */
+  filter: invert(32%) sepia(88%) saturate(7145%) hue-rotate(311deg) brightness(87%) contrast(109%);
+}
+
+h1 {
+  font-size: 3.5rem;
+    line-height: 4rem;
+}
