--- a/usestate/src/App.css
+++ b/usestate/src/App.css
@@ -10,3 +10,38 @@
   margin: 20px;
   border: 3px solid purple;
 }
+
+.must-ring{
+height: 100px;
+width: 100px;
+border-radius: 50%;
+background-color: black;
+}
+
+.kuldne-ring{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: goldenrod;
+}
+
+.sinine-ring{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: blue;
+}
+
+.punane-ring{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: red;
+}
+
+.lilla-ring{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: purple;
+}
