--- a/usestate/src/App.css
+++ b/usestate/src/App.css
@@ -45,3 +45,10 @@ background-color: black;
   border-radius: 50%;
   background-color: purple;
 }
+
+.aktiivne {
+  text-decoration: underline;
+  font-weight: bold;
+  background-color: black;
+  color: white;
+}
