--- a/bakery_shop/src/index.css
+++ b/bakery_shop/src/index.css
@@ -25,5 +25,11 @@ a {
   margin-top: 50px;
 }
 
+th:first-child {
+  font-weight: bold;
+}
 
-/*TODO: Set the font weight of the first table column to bold*/
+td:first-child {
+  font-weight: bold;
+}
+
