--- a/beebiraamat/src/index.css
+++ b/beebiraamat/src/index.css
@@ -19,6 +19,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.2rem;
+  line-height: 1.2;
 }
 
 code {
