--- a/beebiraamat/src/index.css
+++ b/beebiraamat/src/index.css
@@ -39,11 +39,11 @@ a {
 .button {
   padding: 17px 28px;
   font-size: 1.2rem;
-  color: #fff;
+  color: #333;
   font-weight: 600;
   text-transform: uppercase;
-  background-color: var(--primary-color);
-  border: 1px solid var(--primary-color);
+  background-color: var(--secondary-dark);
+  border: 1px solid var(--secondary-dark);
   border-radius: 4px;
   cursor: pointer;
 }
